<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_format"
        android:title="@string/format_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_syntax_check"
        android:title="@string/check_syntax"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_theme"
        android:title="@string/toggle_theme"
        app:showAsAction="never" />

</menu>
